--- a/style.css
+++ b/style.css
@@ -107,7 +107,6 @@ li {
 }
 
 .container3 {
-    border: 2px solid orangered;
     display: flex;
     /* background-color: antiquewhite; */
     justify-content: center;
@@ -128,13 +127,15 @@ li {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 150px;
+    align-items: center;
+    padding: 50px;
 }
 
 .content4 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 500px;
 }
 
 
